# TRO2021-code

./: CMakeLists.txt  README.md  simple_demo_with_groot.cpp  simple_demos.cpp
comparisons/using-cpp/: CMakeLists.txt  README.md  barrier.cpp  barrier.h  main.cpp
comparisons/using-rafcon/state_chart/: README.md  statemachine.json
comparisons/using-rafcon/state_chart/root_state_KZPJHD/: core_data.json  meta_data.json
comparisons/using-rafcon/state_chart/root_state_KZPJHD/ConcurrentStateExec_MNANPS/: core_data.json  meta_data.json
comparisons/using-rafcon/state_chart/root_state_KZPJHD/ConcurrentStateExec_MNANPS/Action1_HFMRJO/: core_data.json  meta_data.json  script.py
comparisons/using-rafcon/state_chart/root_state_KZPJHD/ConcurrentStateExec_MNANPS/Action2_FJNVJQ/: core_data.json  meta_data.json  script.py
comparisons/using-rafcon/state_chart/root_state_KZPJHD/RelativeSincronizator_FJCBCG/: core_data.json  meta_data.json  script.py
examples/: example1.cpp  example2.cpp  example5.cpp  fair_philosophers.cpp  greedy_philosophers.cpp
experiments/: analysis_absolute.cpp  analysis_number_absolute.cpp  analysis_number_relative.cpp  analysis_predictability.cpp  analysis_progress.cpp  analysis_relative.cpp  analysis_resources.cpp
include/: absolute_barrier.h  async_smooth_action.h  barrier.h  data_plotter.h  decorator_progress_sync.h  decorator_resource_sync.h  relative_barrier.h  resource_handler.h  smooth_action.h  sync_smooth_action.h
src/: absolute_barrier.cpp  async_smooth_action.cpp  barrier.cpp  data_plotter.cpp  decorator_progress_sync.cpp  decorator_resource_sync.cpp  relative_barrier.cpp  resource_handler.cpp  smooth_action.cpp  sync_smooth_action.cpp
xmls/: abs_progress_example.xml
